--- a/src/style.sass
+++ b/src/style.sass
@@ -13,60 +13,44 @@ html
   font-size: 62.5%
 
 body
+  display: grid
+  grid-template-rows: auto auto auto
   font-size: 1.6rem
   color: hsl(210, 40%, 30%)
 
-  & > div
-    display: grid
-    grid-template-rows: auto auto auto
+  @media screen and (max-width: 479px)
+    grid-template-columns: 1.5rem 1fr 1.5rem
 
-    @media screen and (max-width: 479px)
-      grid-template-columns: 1.5rem 1fr 1.5rem
+  @media screen and (min-width: 480px) and (max-width: 1279px)
+    grid-template-columns: 1fr 90% 1fr
 
-    @media screen and (min-width: 480px) and (max-width: 1279px)
-      grid-template-columns: 1fr 75% 1fr
+  @media screen and (min-width: 1280px)
+    grid-template-columns: 1fr 75% 1fr
 
-    @media screen and (min-width: 1280px)
-      grid-template-columns: 1fr 50% 1fr
+  & > header.site-header
+    grid-row: 1
+    grid-column: 2
+    padding: 3.5rem 0 3rem
 
-    & > header.site-header
-      grid-row: 1
-      grid-column: 2
-      padding: 3.5rem 0 3rem
+  & > main
+    grid-row: 2
+    grid-column: 2
 
-    & > main
-      grid-row: 2
-      grid-column: 2
-
-    & > footer.site-footer
-      grid-row: 3
-      grid-column: 2
-      padding: 3rem 0
-    
-    & > nav.side-nav
-      position: fixed
-      top: 3.5rem
-      right: 3rem
-
-a
-  color: hsl(210, 100%, 40%)
-  text-decoration: none
-
-  &:hover
-    text-decoration: underline
+  & > footer.site-footer
+    grid-row: 3
+    grid-column: 2
+    padding: 3rem 0
+  
+  & > nav.side-nav
+    position: fixed
+    top: 3.5rem
+    right: 3rem
 
 header.site-header
 
   h1
     padding: 3rem 0 0
     font-size: 2.5rem
-
-    span
-      padding: 0 1rem
-      font-size: 1.8rem
-
-      &::before
-        content: ": "
 
 main
   border-top: solid 0.5rem hsla(210, 40%, 30%, 0.05)
@@ -96,13 +80,6 @@ main
     color: hsl(210, 100%, 40%)
     text-decoration: none
 
-  ul
-    padding-left: 2em
-    list-style: square
-
-    li
-      line-height: 2.6rem
-
   table.leaderboard
     width: 100%
     border-collapse: collapse
@@ -127,10 +104,25 @@ main
         &:nth-child(2)
           text-align: center
 
-      &:nth-child(even) > td
+        ul
+          li
+            display: inline-block
+            list-style: none
+          
+            & + li
+              margin-left: 1.5rem
+
+      &:nth-child(odd) > td
         background: hsla(210, 40%, 30%, 0.05)
 
 footer.site-footer
+  a
+    color: hsl(200, 50%, 30%)
+    text-decoration: none
+
+  &:hover
+    text-decoration: underline
+
   .copyright
     text-align: right
     font-size: 1.4rem
