--- a/src/style.sass
+++ b/src/style.sass
@@ -112,6 +112,21 @@ main
             & + li
               margin-left: 1.5rem
 
+        &.LMP1
+          color: red
+
+        &.LMP2
+          color: blue
+
+        &.LMGTEPro
+          color: green
+
+        &.LMGTEAm
+          color: orange
+
+        &.best-time
+          color: #FC0
+
       &:nth-child(odd) > td
         background: hsla(210, 40%, 30%, 0.05)
 
