--- a/src/style.sass
+++ b/src/style.sass
@@ -96,13 +96,32 @@ main
           text-align: center
 
       td
-        padding: 0.8rem 0.5rem
+        padding: 0.5rem 0.5rem
         font-size: 1.3rem
         font-weight: 600
 
         &:first-child,
         &:nth-child(2)
           text-align: center
+
+        p
+          padding: 0.3rem 0
+          font-weight: 600
+          background: #333
+          color: #FFF
+          border-radius: 0.2rem
+
+          &.LMP1
+            background: red
+
+          &.LMP2
+            background: blue
+
+          &.LMGTEPro
+            background: green
+
+          &.LMGTEAm
+            background: orange
 
         ul
           li
