--- a/docs/style.css
+++ b/docs/style.css
@@ -76,24 +76,29 @@ main a {
   .race-summary table {
     border-collapse: collapse; }
     .race-summary table th, .race-summary table td {
-      padding: 0.5rem 2rem 0.5rem 0;
       text-align: left;
       font-weight: 600; }
     .race-summary table th {
+      padding: 0.2rem 2rem 0rem 0;
       font-size: 1.1rem; }
-    .race-summary table td.race-state span {
-      display: block;
-      min-width: 13rem;
-      padding: 0.2rem;
-      text-align: center;
-      border-radius: 0.3rem; }
-      .race-summary table td.race-state span.green {
-        background: green; }
-      .race-summary table td.race-state span.yellow, .race-summary table td.race-state span.fcy {
-        background: yellow;
-        color: #000; }
-      .race-summary table td.race-state span.red {
-        background: red; }
+    .race-summary table td {
+      padding: 0.5rem 2rem 0.5rem 0; }
+      .race-summary table td.race-state span {
+        display: block;
+        min-width: 13rem;
+        padding: 0.2rem;
+        text-align: center;
+        border-radius: 0.3rem; }
+        .race-summary table td.race-state span.green {
+          background: green; }
+        .race-summary table td.race-state span.yellow, .race-summary table td.race-state span.fcy {
+          background: yellow;
+          color: #000; }
+        .race-summary table td.race-state span.sc {
+          background: #DDD;
+          color: #000; }
+        .race-summary table td.race-state span.red {
+          background: red; }
 
 .leaderboard {
   padding: 0; }
