--- a/docs/style.css
+++ b/docs/style.css
@@ -139,7 +139,7 @@ main a {
         .leaderboard table tbody tr td.car-number p.LMGTEAm {
           background: #e68600; }
       .leaderboard table tbody tr td.best-time {
-        color: #e6bf00; }
+        color: #3cb300; }
 
 footer.site-footer a {
   color: #265973;
